2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Rename configure.in to configure.ac.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Add application argument to epc_publisher_new for controling DNS-SD
	service type: As the examples demonstrate, automatically using
	g_get_prgname only works in themost simplistic cases.

	* libepc/publisher.c, libepc/publisher.h: Add application argument
	and property of the same name to EpcPublisher.
	* examples/simple-publisher.c, tests/test-publisher-libsoup-494128.c
	tests/test-consumer-by-name.c, tests/test-publisher-change-name.c:
	Pass application name to epc_publisher_new.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Improve examples and give them better names.

	* examples/consumer-ui.c: Rename examples/test-consumer.c.
	Remove command line interface. Use epc_consumer_list.
	* examples/simple-publisher.c: Rename examples/test-publisher.c.
	* examples/list-resources.c: Improve comments.
	* examples/lookup-resource.c: Minimalistic value lookup example.
	* examples/.gitignore, Makefile.am: Update examples.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Remove bogous description of a return value
	for epc_password_dialog_set_anonymous_allowed.

	* libepc-ui/password-dialog.c: Remove bogous description.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Resolve authentication dead-lock.

	* libepc/shell.c: Print debug information about big-lock handlers.
	* libepc/consumer.c: Aquire GDK big-lock before emitting
	authenticate and reauthenticate signals.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Add capability for listing publisher resources.

	* libepc/publisher.c: Implement URL handler for '/list/' and '/' path.
	* libepc/consumer.c, libepc/consumer.h: Implement epc_consumer_list.
	* examples/list-resources.c: New example for listing resources.
	* Makefile.am, examples/.gitignore: Add examples/list-resources.