@@ -9,7 +9,7 @@ AUTOMAKE_OPTIONS = 1.6
 # of using the various options.
 
 # The name of the module, e.g. 'glib'.
-DOC_MODULE=libepc
+DOC_MODULE=libepc-1.0
 
 # The top-level SGML file. You can change this if you want to.
 DOC_MAIN_SGML_FILE=$(DOC_MODULE)-docs.xml
@@ -70,9 +70,8 @@ expand_content_files=
 AM_CFLAGS = $(LIBEPC_CFLAGS)
 
 GTKDOC_LIBS = \
-	$(top_builddir)/libepc-ui/libepc-ui.la \
-	$(top_builddir)/libepc/libepc.la
-
+	$(top_builddir)/libepc-ui/libepc-ui-1.0.la \
+	$(top_builddir)/libepc/libepc-1.0.la
 
 # This includes the standard gtk-doc make rules, copied by gtkdocize.
 include $(top_srcdir)/gtk-doc.make
@@ -83,4 +82,3 @@ EXTRA_DIST +=
 
 sgml.stamp: $(DOC_MODULE)-sections.txt
 $(DOC_MAIN_SGML_FILE): sgml.stamp
-
